--- a/package.json
+++ b/package.json
@@ -1,8 +1,14 @@
 {
+	"scripts": {
+		"build": "tsc",
+		"start": "tsc && node bot.js"
+	},
 	"devDependencies": {
+		"@types/node": "^20.4.5",
 		"typescript": "^5.1.6"
 	},
 	"dependencies": {
+		"dotenv": "^16.3.1",
 		"grammy": "^1.17.2"
 	}
 }
