--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
 	"scripts": {
 		"build": "tsc",
-		"start": "tsc && node bot.js"
+		"start": "tsc && node bot.js",
+		"dev": "tsc-watch --onSuccess \"node bot.js\""
 	},
 	"devDependencies": {
 		"@types/node": "^20.4.5",
+		"tsc-watch": "^6.0.4",
 		"typescript": "^5.1.6"
 	},
 	"dependencies": {
+		"@metamask/sdk": "^0.5.6",
 		"dotenv": "^16.3.1",
 		"grammy": "^1.17.2"
 	}
