--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
 	},
 	"devDependencies": {
 		"@types/node": "^20.4.5",
+		"@types/qrcode": "^1.5.1",
 		"tsc-watch": "^6.0.4",
 		"typescript": "^5.1.6"
 	},
 	"dependencies": {
 		"@metamask/sdk": "^0.5.6",
 		"dotenv": "^16.3.1",
-		"grammy": "^1.17.2"
+		"grammy": "^1.17.2",
+		"qrcode": "^1.5.3"
 	}
 }
