--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 	},
 	"dependencies": {
 		"@metamask/sdk": "^0.5.6",
+		"@thirdweb-dev/sdk": "^3.10.42",
 		"dotenv": "^16.3.1",
 		"grammy": "^1.17.2",
 		"qrcode": "^1.5.3"
