--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
 		"typescript": "^5.1.6"
 	},
 	"dependencies": {
+		"@grammyjs/conversations": "^1.1.2",
+		"@grammyjs/menu": "^1.2.1",
 		"@metamask/sdk": "^0.5.6",
 		"@thirdweb-dev/sdk": "^3.10.42",
 		"dotenv": "^16.3.1",
